--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,17 @@ body {
     background-color: #f9f9f9;
     color: #333;
 }
+h {
 
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 5px;
+    background-color: #b30844;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+}
  h2  {
     text-align: center;
     color: #333;
