--- a/travelapp/templates/edit_package.html
+++ b/travelapp/templates/edit_package.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <title>Edit Package</title>
 </head>
 <body>
+{% block content %}
     <h1>Edit Package</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -12,5 +14,6 @@
         <button type="submit">Save Changes</button>
     </form>
     <button onclick="window.location.href='{% url 'vendor_home' %}'">Cancel</button>
+{% endblock %}
 </body>
 </html>
